:recycle: refactor: uso de 'equals' no while ao envés de 'endsWith' e uso de 'removeLast'ao envés de 'remove(lines.size() - 1)'